ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffeeshop-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:026090549419:certificate/fde74b1c-ca57-4137-8850-b6c0aa03e92b
    external-dns.alpha.kubernetes.io/hostname: coffee.baominh.click
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/target-type: ip 
    alb.ingress.kubernetes.io/ssl-redirect: '443'

spec:
  ingressClassName: alb
  rules:
    - host: coffee.baominh.click
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: coffeeshop-proxy
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coffeeshop-ui
                port:
                  number: 8888
